# C-SentenceEmbedding

./: .gitignore  README.md  pyproject.toml
cprog/: main.c  test_c_embedding.sh
python/: convert_to_onnx.py  python_embedding.py
