[tool.poetry]
name = "pgsentencevector"
version = "0.1.0"
description = ""
authors = ["seyedasfar <42825498+seyedasfar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
onnx = "^1.16.2"
onnxruntime = "^1.19.2"
sentence-transformers = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
